--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ body {
 
 [class^="flaticon-"]:before, [class*=" flaticon-"]:before, [class^="flaticon-"]:after, [class*=" flaticon-"]:after {
   font-size: 75px;
+  margin-left: 0;
 }
 
 i {
